--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:seed": "prisma db seed",
+    "db:studio": "prisma studio"
+  },
+  "prisma": {
+    "seed": "bun run prisma/seed.ts"
   },
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
@@ -17,6 +22,7 @@
     "lucia": "^3.2.1",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
+    "oslo": "^1.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
