--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucia": "^3.2.1",
@@ -25,8 +26,10 @@
     "oslo": "^1.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
